--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
     "redirects": [
       {
-        "source": "/projects/spotify-clone/songs/:filePath",
-        "destination": "spotify-clone/songs/:filePath",
+        "source": "https://manav-coral.vercel.app/songs/",
+        "destination": "/songs",
         "permanent": true
       }
-    ],
-    "rewrites": [
-      {
-        "source": "/projects/<SideProjectName>",
-        "destination": "<SideProjectProdUrl>"
-      }
     ]
-  }
+}
